--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
+		"a70838697/yii2elfinder": "dev-master",
         "noumo/easyii": "dev-master"
     },
     "require-dev": {
