--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-		"a70838697/yii2elfinder": "dev-master",
-        "noumo/easyii": "dev-master"
+        "noumo/easyii": "dev-master",
+        "fxp/composer-asset-plugin": "^1.1",
+        "bedezign/yii2-audit": "1.0.6"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
