--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0",
         "noumo/easyii": "dev-master",
         "fxp/composer-asset-plugin": "^1.1",
-        "bedezign/yii2-audit": "1.0.6"
+        "bedezign/yii2-audit": "1.0.6",
+        "a70838697/yii2elfinder": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
